# autotools-skeleton

./: AUTHORS  COPYRIGHT  README  configure.ac
config_m4/: versioning.m4
src/: Makefile.am  distributable_header.h  internal_header.h  lib1.c  my_program.c
src/subdir/: Makefile.am  sublib.c
